fixed footer form overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Exo:400,700");
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -76,10 +78,15 @@ code {
 }
 
 #footer-bar {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 5;
+	font-size: 1em;
+}
+
+#body-tag {
+	padding-bottom: 5px;
+}
+
+#contact-form-element {
+	padding-bottom: 13.23%;
 }
 
 #font-icon {
